# smol-dev

./: main.py  pyproject.toml  readme.md
smol_dev/: main.py  prompts.py
