[project]
name = "smol_dev"
version = "0.0.3"
description = "python module of smol developer"
authors = [{name = "swyx", email = "swyx@dontemail.me"}]
license = "MIT"
readme = "readme.md"
packages = [{ include = "smol_dev" }]
requires-python=">=3.10,<3.12.0"
dependencies = [
     "openai",
     "openai-function-call",
     "tenacity",
     "agent-protocol",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.scripts]
src = "src.__main__:main"
api = "smol_dev.api:main"

[tool.uv]
dev-dependencies = [
    "pip>=24.3.1",
    "setuptools>=75.4.0",
]

[project.urls]
"Homepage" = "https://github.com/smol-ai/developer"
"Bug Tracker" = "https://github.com/smol-ai/developer/issues"
